# scibowlbot

./: .gitignore  Changelog.md  Dockerfile  LICENSE  LICENSE.txt  Makefile  README.md  crazy.json  docker-compose.yaml  dockerignore  edit.html  error.txt  index.html  main.py  points.json  privacy.md  probs.json  probsjsonplanning.txt  pyproject.toml  requirements.txt  style.css  terms.md  todo.md  vercel.json
assets/: Changelog.md  points.json
assets/css/: edit.css
assets/js/: edit.js
commands/: change_profile.py  competition.py  constants.py  currency.py  dev.py  dumpcode.txt  gift.py  leaderboard.py  misc.py  profile.py  question.py  question2.py  serverstats.py  stats.py  suggest.py
questions/: astro.json  bio.json  chem.json  crazy.json  cs.json  eas.json  energy.json  es.json  gen.json  math.json  phy.json  weird.json
utils/: func.py  menu.py
website/: app.py  edit.html  index.html  requirements.txt  style.css
website/css/: edit.css
website/js/: edit.js
website/static/css/: edit.css  edit_modal.css  nav.css  style.css  suggestions.css
website/static/js/: edit.js  edit_modal.js  main.js  suggestions.js
website/templates/: edit.html  edit_modal.html  login.html  nav.html  suggestions.html
